<?xml version="1.0" encoding="utf-8"?>



<PreferenceScreen
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_which_sport_default"
        android:inputType="text"
        android:key="@string/settings_which_sport_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_which_sport_label" />

    <ListPreference
        android:defaultValue="@string/settings_preference2dafaultvalue"
        android:entries="@array/settings_preference2entries"
        android:entryValues="@array/settings_preference2entryvalues"
        android:key="@string/settings_preference2key"
        android:title="@string/settings_preference2title" />

</PreferenceScreen>